[package]
name = "isotope"
version = "0.1.0"
edition = "2021"

[dependencies]
geo = { version = "0.28.0", features = ["serde"] }
nalgebra = { version = "0.32.5", features = ["serde-serialize"] }
serde = { version = "1.0.203", features = ["derive", "rc"] }
thiserror = "1.0.61"
tsify = { version = "0.4.5", optional = true }
wasm-bindgen = { version = "*", optional = true }

[features]
tsify = ["dep:tsify", "dep:wasm-bindgen"]

[[bench]]
name = "solvers"
harness = false
